Xwayland crash on launching dolphin-emu with dmabuf import error
Here is the relevant log from Weston’s stderr:
[11:10:15.852] Spawned Xwayland server, pid 3984
glamor: No eglstream capable devices found
[11:10:16.004] xfixes version: 5.0
[11:10:16.009] created wm, root 924
The XKEYBOARD keymap compiler (xkbcomp) reports:
> Warning: Unsupported maximum keycode 569, clipping.
> X11 cannot support keycodes above 255.
> Internal error: Could not resolve keysym Invalid
Errors from xkbcomp are not fatal to the X server
[11:10:34.929] libwayland: error in client communication (pid 3930)
(EE)
Fatal server error:
(EE) [destroyed object]: error 7: importing the supplied dmabufs failed
(EE)
[11:10:34.933] xserver exited, code 256
Dolphin itself dies with:
The X11 connection broke (error 1). Did the X11 server die?
malloc_consolidate(): invalid chunk size
zsh: abort (core dumped) dolphin-emu
A possibly noteworthy point is that Weston only exposes DRM_FORMAT_MOD_INVALID
modifiers on its zwp_linux_dmabuf_v1
interface, see weston-info
:
interface: 'zwp_linux_dmabuf_v1', version: 3, name: 13
formats:
'XYUV'(0x56555958), modifier: 0x00ffffffffffffff
'YU24'(0x34325559), modifier: 0x00ffffffffffffff
'YU12'(0x32315559), modifier: 0x00ffffffffffffff
'NV12'(0x3231564e), modifier: 0x00ffffffffffffff
'YUYV'(0x56595559), modifier: 0x00ffffffffffffff
'XR24'(0x34325258), modifier: 0x00ffffffffffffff
'AR24'(0x34325241), modifier: 0x00ffffffffffffff
Another data point is that Xwayland spawned twelve llvmpipe threads, while on a computer where this works there is none, which might indicate that it isn’t using iris properly.
I’m on Weston master (40c519a3), Xwayland 1.20.8, Mesa 20.1.0, Linux 5.6.15, on an Intel UHD630 (there is also a Nouveau GPU plugged in but it isn’t used for this, I think).
Nothing happens in dmesg
, ask me if you want me to increase the logging level for further debugging.
Thanks!